--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+.letter {
+  padding: 0 20px;
+  background: grey;
+  text-align: center;
+  color: white;
+  font-size: 15px;
+}
