--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,10 +13,32 @@
  *= require_tree .
  *= require_self
  */
+
+.col-xs-1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .letter {
   padding: 0 20px;
-  background: grey;
-  text-align: center;
   color: white;
   font-size: 15px;
+  margin: 0 5px ;
+  background: grey;
+}
+
+a {
+  margin-top: 30px;
+  text-decoration: none;
+  color: grey;
+}
+
+a:hover {
+  text-decoration: none;
+  font-size:bolder;
+}
+
+p {
+  margin:30px 15px;
 }
